--- a/main.html
+++ b/main.html
@@ -161,7 +161,7 @@
 					</div>
 			</div>
 			<div class="portfolioItem">
-				<div class="portfolioImageBackground" style="background-image: url(images/brotherliew.jpg);"></div>
+				<div class="portfolioImageBackground" style="background-image: url(brotherliew.jpg);"></div>
 					<div class="imageText">
 						<div class="subtitle">
 							Name:<br>Liew Wai Nam<br><br>Matric No.:<br>143408
